kubernetes/apps/actions-runner-system/gha-runner-scale-set/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.ajgon.casa/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: gha-runner-scale-set-egress-external
specs:
  - endpointSelector: {}
    egress:
      - toFQDNs:
          # must be repeated as they're used by another policy
          - matchName: api.github.com
          - matchName: broker.actions.githubusercontent.com

          # for actions themselves
          - matchName: "github.com"
          - matchPattern: "*.github.com"
          - matchPattern: "*.actions.githubusercontent.com"
          - matchPattern: "*.blob.core.windows.net"

          # for actions workloads
          - matchName: "archive.ubuntu.com"
          - matchName: "cache.garnix.io"
          - matchName: "cdn.jsdelivr.net"
          - matchName: "code.forgejo.org"
          - matchName: "crates.io"
          - matchName: "deploy-rs.cachix.org"
          - matchName: "dl.k8s.io"
          - matchName: "downloads.sourceforge.net"
          - matchName: "electron-dl.todoist.net"
          - matchName: "files.pythonhosted.org"
          - matchName: "github-contributions.vercel.app"
          - matchName: "nix-community.cachix.org"
          - matchName: "nixos.org"
          - matchName: "obsidian.md"
          - matchName: "ppa.launchpadcontent.net"
          - matchName: "proxy.golang.org"
          - matchName: "pypi.org"
          - matchName: "raw.githubusercontent.com"
          - matchName: "registry.npmjs.org"
          - matchName: "broker.actions.githubusercontent.com"
          - matchName: "release-assets.actions.githubusercontent.com"
          - matchName: "release-assets.githubusercontent.com"
          - matchName: "nix.ajgon.casa"
          - matchName: "s3.ajgon.casa"
          - matchName: "static.crates.io"
          - matchName: "static.rust-lang.org"
          - matchName: "storage.googleapis.com"
          - matchName: "sum.golang.org"
          - matchName: "wakapi.ajgon.casa"
          - matchPattern: "*.dl.k8s.io"
          - matchPattern: "*.dl.sourceforge.net"
          - matchPattern: "*.install.determinate.systems"
          - matchPattern: "*.nixos.org"
          - matchPattern: "*.s3.dualstack.us-east-2.amazonaws.com"
          - matchPattern: "*.swim.install.determinate.systems"
          - matchPattern: "stable.*.discordapp.net"
        toPorts:
          - ports:
              - port: "443"
      - toFQDNs:
          # for actions workloads
          - matchName: "archive.ubuntu.com"
        toPorts:
          - ports:
              - port: "80"
      # labeling pods in runners is PITA, easier to add them here
      - toEndpoints:
          - matchLabels:
              app.kubernetes.io/name: envoy
        toPorts:
          - ports:
              - port: "10080"
              - port: "10443"
      # via envoy, when pods use ${ROOT_DOMAIN}
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: network
              gateway.envoyproxy.io/owning-gateway-name: envoy-internal
        toPorts:
          - ports:
              - port: "10443"
